--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,14 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@/components/*":["./src/components/*"],
+      "@/context/*":["./src/context/*"],
+      "@/hooks/*":["./src/hooks/*"],
+      "@/lib/*":["./src/lib/*"]
+    }
+  }
 }
